this is working

--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -206,7 +206,7 @@
           <!-- Basic Package -->
           <div class="package-card">
             <h3>Basic</h3>
-            <p>PKR 49k *</p>
+            <!-- <p>PKR 49k *</p> -->
             <ul>
               <li><span class="icon-tick">✔</span> 3 Design Concepts</li>
               <li><span class="icon-tick">✔</span> 2 Revisions</li>
@@ -223,14 +223,14 @@
               <li><span class="icon-tick">✔</span> FREE Consultation</li>
               <li><span class="icon-tick">✔</span> 100% Advance Payment</li>
             </ul>
-            <button class="cta" aria-label="Choose Basic Package">BUY</button>
+            <!-- <button class="cta" aria-label="Choose Basic Package">BUY</button> -->
           </div>
       
           <!-- Standard Package -->
           <div class="package-card">
             <h3>Standard</h3>
             <p>Most Popular</p>
-            <p>PKR 110k *</p>
+            <!-- <p>PKR 110k *</p> -->
             <ul>
               <li><span class="icon-tick">✔</span> 5 Design Concepts</li>
               <li><span class="icon-tick">✔</span> 4 Revisions</li>
@@ -247,13 +247,13 @@
               <li><span class="icon-tick">✔</span> FREE Consultation</li>
               <li><span class="icon-tick">✔</span> 50% Advance Payment</li>
             </ul>
-            <button class="cta" aria-label="Choose Standard Package">BUY</button>
+            <!-- <button class="cta" aria-label="Choose Standard Package">BUY</button> -->
           </div>
       
           <!-- Premium Package -->
           <div class="package-card">
             <h3>Premium</h3>
-            <p>PKR 149k *</p>
+            <!-- <p>PKR 149k *</p> -->
             <ul>
               <li><span class="icon-tick">✔</span> 8 Design Concepts</li>
               <li><span class="icon-tick">✔</span> Unlimited Revisions</li>
@@ -269,7 +269,7 @@
               <li><span class="icon-tick">✔</span> FREE Consultation</li>
               <li><span class="icon-tick">✔</span> 50% Advance Payment</li>
             </ul>
-            <button class="cta" aria-label="Choose Premium Package">BUY</button>
+            <!-- <button class="cta" aria-label="Choose Premium Package">BUY</button> -->
           </div>
         </div>
       </div>
