--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                 <div class="col-sm-3">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="assets/images/innovation.png" alt="Value 1" />
+                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/innovation.png" alt="Value 1" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Innovation</h3>
@@ -118,7 +118,7 @@
                 <div class="col-sm-3">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="assets/images/integrity.png" alt="Value 2" />
+                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/integrity.png" alt="Value 2" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Integrity</h3>
@@ -129,7 +129,7 @@
                 <div class="col-sm-3">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="assets/images/collaboration.png" alt="Value 3" />
+                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/collaboration.png" alt="Value 3" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Collaboration</h3>
@@ -140,7 +140,7 @@
                 <div class="col-sm-3">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="assets/images/excellence.png" alt="Value 4" />
+                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/excellence.png" alt="Value 4" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Excellence</h3>
@@ -156,7 +156,7 @@
                 <div class="col-sm-4">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="assets/images/web-work.png" />
+                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/web-work.png" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Web Design & Development</h3>
@@ -169,7 +169,7 @@
                 <div class="col-sm-4">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="assets/images/graphic-work.png" />
+                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/graphic-work.png" />
                     </div>
                     <div class="ubutia-card-content">
                         <h3 style="color: black;">Graphic Design</h3>
@@ -182,7 +182,7 @@
                 <div class="col-sm-4">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="assets/images/dm-work.jpg" />
+                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/dm-work.jpg" />
                     </div>
                     <div class="ubutia-card-content">
                         <h3 style="color: black;">Digital Marketing</h3>
@@ -198,7 +198,7 @@
                 <div class="col-sm-4">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="assets/images/8.jpg" />
+                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/8.jpg" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black">Rosa Ly</h3>
@@ -223,7 +223,7 @@
                 <div class="col-sm-4">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="assets/images/9.jpg" />
+                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/9.jpg" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Eva Ly</h3>
@@ -248,7 +248,7 @@
                 <div class="col-sm-4">
                   <div class="ubutia-card">
                     <div class="ubutia-card-header">
-                      <img class="img-responsive" src="assets/images/10.jpg" />
+                      <img class="img-responsive" src="ubutia-gh-pages/assets/images/10.jpg" />
                     </div>
                     <div class="ubutia-card-content">
                       <h3 style="color: black;">Graham Bill</h3>
