--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                   <a href="index.html"
                     ><span class="ubutia-icon">
                       <img
-                        src="/assets/images/logoa.png"
+                        src="ubutia-gh-paes/assets/images/logoa.png"
                         alt="site-logo"
                         width="200px"
                       /> </span
