--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/images/logo-icon.png"
+      href="/assets/images/logo-icon.png"
     />
 
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/assets/css/bootstrap-theme.min.css" rel="stylesheet" />
 
-    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="/assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="/assets/css/owl.theme.default.min.css" rel="stylesheet" />
 
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="/assets/css/magnific-popup.css" rel="stylesheet" />
 
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="/assets/css/style.css" rel="stylesheet" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -52,7 +52,7 @@
                     <a href="index.html"
                       ><span class="ubutia-icon">
                         <img
-                          src="/assets/images/logoa.png"
+                          src="ubutia-gh-pages/assets/images/lllogo.png"
                           alt="site-logo"
                           width="200px"
                         /> </span
@@ -142,7 +142,7 @@
                 <div class="ubutia-card-header">
                   <div class="card-icon">
                     <img
-                      src="/assets/images/dm-service.png"
+                      src="ubutia-gh-pages/assets/images/dm-service.png"
                       alt="digital-marketing"
                       width="130px"
                       style="border-radius: 50%"
@@ -164,7 +164,7 @@
                 <div class="ubutia-card-header">
                   <div class="card-icon">
                     <img
-                      src="/assets/images/ebook1.jpg"
+                      src="ubutia-gh-pages/assets/images/ebook1.jpg"
                       alt="digital-marketing"
                       width="130px"
                       style="border-radius: 50%"
@@ -216,14 +216,14 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
-              <img class="quote" src="assets/images/quote.png" />
+              <img class="quote" src="ubutia-gh-pages/assets/images/quote.png" />
               <p>
                 Whether it's a website, online application, graphic design,
                 digital marketing campaign, or eBook publishing service, our
                 developers use scalable, contemporary technology to make your
                 project a reality.
               </p>
-              <img src="assets/images/mouse.png" />
+              <img src="ubutia-gh-pages/assets/images/mouse.png" />
             </div>
           </div>
         </div>
@@ -237,7 +237,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="assets/images/station-web.jpg"
+                    src="ubutia-gh-pages/assets/images/station-web.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -257,7 +257,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="assets/images/station-app.jpg"
+                    src="ubutia-gh-pages/assets/images/station-app.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -277,7 +277,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="assets/images/station-edit.jpg"
+                    src="ubutia-gh-pages/assets/images/station-edit.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -298,7 +298,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="assets/images/station-publish.jpg"
+                    src="ubutia-gh-pages/assets/images/station-publish.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -319,7 +319,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="assets/images/station-digital.jpg"
+                    src="ubutia-gh-pages/assets/images/station-digital.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -340,7 +340,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="assets/images/station-branding.jpg"
+                    src="ubutia-gh-pages/assets/images/station-branding.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
