--- a/services.html
+++ b/services.html
@@ -15,19 +15,19 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/images/logo-icon.png"
+      href="/ubutia-gh-pages/assets/images/logoa.png"
     />
 
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="/ubutia-gh-pages/assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/ubutia-gh-pages/assets/css/bootstrap-theme.min.css" rel="stylesheet" />
 
-    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="/ubutia-gh-pages/assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="/ubutia-gh-pages/assets/css/owl.theme.default.min.css" rel="stylesheet" />
 
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="/ubutia-gh-pages/assets/css/magnific-popup.css" rel="stylesheet" />
 
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/services.css" />
+    <link href="/ubutia-gh-pages/assets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/ubutia-gh-pages/assets/css/services.css" />
 
     <style>
       .owl-carousel .item {
