--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -46,7 +46,7 @@
                   <a href="index.html">
                     <span class="ubutia-icon">
                       <img
-                        src="/assets/images/logoa.png"
+                        src="ubutia-gh-pages/assets/images/logoa.png"
                         alt="site-logo"
                         width="150px"
                       />
@@ -81,19 +81,19 @@
         <h2 style="margin-top: 20px">Why Choose Us</h2>
         <div class="cards">
           <div class="card">
-            <img src="/assets/images/web-design.png" alt="Custom Web Design" />
+            <img src="ubutia-gh-pages/assets/images/web-design.png" alt="Custom Web Design" />
             <p style="font-size: 20px">Custom <br> Design</p>
           </div>
           <div class="card">
             <img
-              src="/assets/images/clock.png"
+              src="ubutia-gh-pages/assets/images/clock.png"
               alt="Website Optimization"
             />
             <p style="font-size: 20px">Fast  <br>Turnaround</p>
           </div>
           <div class="card">
             <img
-              src="/assets/images/creativity.png"
+              src="ubutia-gh-pages/assets/images/creativity.png"
               alt="Responsive Web Design"
             />
             <p style="font-size: 20px">Creative Experties</p>
@@ -105,13 +105,13 @@
         <h2 class="section-title text-center">Our Grpahic Designing Services</h2>
         <div class="services">
           <div class="carrd">
-            <img src="/assets/images/ld.png" alt="Custom Web Design" />
+            <img src="ubutia-gh-pages/assets/images/logo-design.png" alt="Custom Web Design" />
             <p style="font-size: 20px">
                Logo <br> Design
             </p>          </div>
           <div class="carrd">
             <img
-              src="/assets/images/branding.png"
+              src="ubutia-gh-pages/assets/images/branding.png"
               alt="ecommerce website development"
             />
             <p style="font-size: 20px">
@@ -119,14 +119,14 @@
             </p>
           </div>
           <div class="carrd">
-            <img src="/assets/images/print.png" alt="cms" />
+            <img src="ubutia-gh-pages/assets/images/print.png" alt="cms" />
             <p style="font-size: 20px">
                Print <br> Design
             </p>
           </div>
           <div class="carrd">
             <img
-              src="/assets/images/webg.png"
+              src="ubutia-gh-pages/assets/images/webg.png"
               alt="Maintenance and Support"
             />
             <p style="font-size: 20px">
@@ -166,35 +166,35 @@
         <h2 class="section-title text-center">Projects We Have Done</h2>
         <div class="project-gallery">
           <div class="project-card">
-            <img src="/assets/images/ecommerce.jpg" alt="Project 1" />
+            <img src="ubutia-gh-pages/assets/images/ecommerce.jpg" alt="Project 1" />
             <p>E-commerce Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/portfolio.jpg" alt="Project 2" />
+            <img src="ubutia-gh-pages/assets/images/portfolio.jpg" alt="Project 2" />
             <p>Portfolio Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/business.jpg" alt="Project 3" />
+            <img src="ubutia-gh-pages/assets/images/business.jpg" alt="Project 3" />
             <p>Corporate Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/blog.jpg" alt="Project 4" />
+            <img src="ubutia-gh-pages/assets/images/blog.jpg" alt="Project 4" />
             <p>Blog Platform</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/educational.jpg" alt="Project 5" />
+            <img src="ubutia-gh-pages/assets/images/educational.jpg" alt="Project 5" />
             <p>Educational Platform</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/real estate.jpg" alt="Project 6" />
+            <img src="ubutia-gh-pages/assets/images/real estate.jpg" alt="Project 6" />
             <p>Real Estate Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/event.png" alt="Project 7" />
+            <img src="ubutia-gh-pages/assets/images/event.png" alt="Project 7" />
             <p>Event Management Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/business.jpg" alt="Project 8" />
+            <img src="ubutia-gh-pages/assets/images/business.jpg" alt="Project 8" />
             <p>Online Marketplace</p>
           </div>
         </div>
