--- a/elements.html
+++ b/elements.html
@@ -48,7 +48,7 @@
                                     <a href="index.html"
                                     ><span class="ubutia-icon">
                                       <img
-                                        src="/assets/images/logo-icon.png"
+                                        src="ubutia-gh-pages/assets/images/logo-icon.png"
                                         alt="site-logo"
                                         width="50px"
                                       /> </span
@@ -111,7 +111,7 @@
                                 <div class="col-sm-4">
                                     <div class="ubutia-card">
                                         <div class="ubutia-card-header">
-                                            <img class="img-responsive" src="assets/images/4.jpg">
+                                            <img class="img-responsive" src="ubutia-gh-pagesassets/images/4.jpg">
                                         </div>
                                         <div class="ubutia-card-content">
                                             <h3>Creative Business Cup</h3>
@@ -124,7 +124,7 @@
                                 <div class="col-sm-4">
                                     <div class="ubutia-card">
                                         <div class="ubutia-card-header">
-                                            <img class="img-responsive" src="assets/images/5.jpg">
+                                            <img class="img-responsive" src="ubutia-gh-pages/assets/images/5.jpg">
                                         </div>
                                         <div class="ubutia-card-content">
                                             <h3>Creative Cover Design</h3>
@@ -137,7 +137,7 @@
                                 <div class="col-sm-4">
                                     <div class="ubutia-card">
                                         <div class="ubutia-card-header">
-                                            <img class="img-responsive" src="assets/images/6.jpg">
+                                            <img class="img-responsive" src="ubutia-gh-pages/assets/images/6.jpg">
                                         </div>
                                         <div class="ubutia-card-content">
                                             <h3>Creative Namecard</h3>
@@ -153,7 +153,7 @@
                                 <div class="col-sm-4">
                                     <div class="ubutia-card">
                                         <div class="ubutia-card-header">
-                                            <img class="img-responsive" src="assets/images/8.jpg">
+                                            <img class="img-responsive" src="ubutia-gh-pages/assets/images/8.jpg">
                                         </div>
                                         <div class="ubutia-card-content">
                                             <h3>Rosa Ly</h3>
@@ -172,7 +172,7 @@
                                 <div class="col-sm-4">
                                     <div class="ubutia-card">
                                         <div class="ubutia-card-header">
-                                            <img class="img-responsive" src="assets/images/9.jpg">
+                                            <img class="img-responsive" src="ubutia-gh-pages/assets/images/9.jpg">
                                         </div>
                                         <div class="ubutia-card-content">
                                             <h3>Eva Ly</h3>
@@ -191,7 +191,7 @@
                                 <div class="col-sm-4">
                                     <div class="ubutia-card">
                                         <div class="ubutia-card-header">
-                                            <img class="img-responsive" src="assets/images/10.jpg">
+                                            <img class="img-responsive" src="ubutia-gh-pages/assets/images/10.jpg">
                                         </div>
                                         <div class="ubutia-card-content">
                                             <h3>Graham Bill</h3>
@@ -255,11 +255,11 @@
             </footer>
         </div>
 
-        <script src="assets/js/jquery-3.1.1.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/owl.carousel.min.js"></script>
+        <script src="ubutia-gh-pages/assets/js/jquery-3.1.1.js"></script>
+        <script src="ubutia-gh-pages/assets/js/bootstrap.min.js"></script>
+        <script src="ubutia-gh-pages/assets/js/owl.carousel.min.js"></script>
         <script src="https://use.fontawesome.com/55b73bf748.js"></script>
-        <script src="assets/js/jquery.magnific-popup.js"></script>
-        <script src="assets/js/script.js"></script>
+        <script src="ubutia-gh-pages/assets/js/jquery.magnific-popup.js"></script>
+        <script src="ubutia-gh-pages/assets/js/script.js"></script>
     </body>
 </html>
