--- a/graphic-designing.html
+++ b/graphic-designing.html
@@ -10,13 +10,13 @@
       type="image/x-icon"
       href="assets/images/logo-icon.png"
     />
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet" />
-    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
-    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/web.css" />
+    <link href="ubutia-gh-pages/assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="ubutia-gh-pages/assets/css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="ubutia-gh-pages/assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="ubutia-gh-pages/assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="ubutia-gh-pages/assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="ubutia-gh-pages/assets/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="ubutia-gh-pages/assets/css/web.css" />
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -46,7 +46,7 @@
                   <a href="index.html">
                     <span class="ubutia-icon">
                       <img
-                        src="/assets/images/logoa.png"
+                        src="ubutia-gh-pages/assets/images/logo.png"
                         alt="site-logo"
                         width="150px"
                       />
@@ -81,19 +81,19 @@
         <h2 style="margin-top: 20px">Why Choose Us</h2>
         <div class="cards">
           <div class="card">
-            <img src="/assets/images/web-design.png" alt="Custom Web Design" />
+            <img src="ubutia-gh-pages/assets/images/web-design.png" alt="Custom Web Design" />
             <p style="font-size: 20px">Custom <br> Design</p>
           </div>
           <div class="card">
             <img
-              src="/assets/images/clock.png"
+              src="ubutia-gh-pages/assets/images/clock.png"
               alt="Website Optimization"
             />
             <p style="font-size: 20px">Fast  <br>Turnaround</p>
           </div>
           <div class="card">
             <img
-              src="/assets/images/creativity.png"
+              src="ubutia-gh-pages/assets/images/creativity.png"
               alt="Responsive Web Design"
             />
             <p style="font-size: 20px">Creative Experties</p>
@@ -105,13 +105,13 @@
         <h2 class="section-title text-center">Our Grpahic Designing Services</h2>
         <div class="services">
           <div class="carrd">
-            <img src="/assets/images/ld.png" alt="Custom Web Design" />
+            <img src="ubutia-gh-pages/assets/images/ld.png" alt="Custom Web Design" />
             <p style="font-size: 20px">
                Logo <br> Design
             </p>          </div>
           <div class="carrd">
             <img
-              src="/assets/images/branding.png"
+              src="ubutia-gh-pages/assets/images/branding.png"
               alt="ecommerce website development"
             />
             <p style="font-size: 20px">
@@ -119,14 +119,14 @@
             </p>
           </div>
           <div class="carrd">
-            <img src="/assets/images/print.png" alt="cms" />
+            <img src="ubutia-gh-pages/assets/images/print.png" alt="cms" />
             <p style="font-size: 20px">
                Print <br> Design
             </p>
           </div>
           <div class="carrd">
             <img
-              src="/assets/images/webg.png"
+              src="ubutia-gh-pages/assets/images/webg.png"
               alt="Maintenance and Support"
             />
             <p style="font-size: 20px">
@@ -166,35 +166,35 @@
         <h2 class="section-title text-center">Projects We Have Done</h2>
         <div class="project-gallery">
           <div class="project-card">
-            <img src="/assets/images/ecommerce.jpg" alt="Project 1" />
+            <img src="ubutia-gh-pages/assets/images/ecommerce.jpg" alt="Project 1" />
             <p>E-commerce Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/portfolio.jpg" alt="Project 2" />
+            <img src="ubutia-gh-pages/assets/images/portfolio.jpg" alt="Project 2" />
             <p>Portfolio Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/business.jpg" alt="Project 3" />
+            <img src="ubutia-gh-pages/assets/images/business.jpg" alt="Project 3" />
             <p>Corporate Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/blog.jpg" alt="Project 4" />
+            <img src="ubutia-gh-pages/assets/images/blog.jpg" alt="Project 4" />
             <p>Blog Platform</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/educational.jpg" alt="Project 5" />
+            <img src="ubutia-gh-pages/assets/images/educational.jpg" alt="Project 5" />
             <p>Educational Platform</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/real estate.jpg" alt="Project 6" />
+            <img src="ubutia-gh-pages/assets/images/real estate.jpg" alt="Project 6" />
             <p>Real Estate Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/event.png" alt="Project 7" />
+            <img src="ubutia-gh-pages/assets/images/event.png" alt="Project 7" />
             <p>Event Management Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/business.jpg" alt="Project 8" />
+            <img src="ubutia-gh-pages/assets/images/business.jpg" alt="Project 8" />
             <p>Online Marketplace</p>
           </div>
         </div>
@@ -327,11 +327,11 @@
         </div>
       </footer>
     </div>
-    <script src="assets/js/jquery-3.1.1.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="ubutia-gh-pages/assets/js/jquery-3.1.1.js"></script>
+    <script src="ubutia-gh-pages/assets/js/bootstrap.min.js"></script>
+    <script src="ubutia-gh-pages/assets/js/owl.carousel.min.js"></script>
     <script src="https://use.fontawesome.com/55b73bf748.js"></script>
-    <script src="assets/js/jquery.magnific-popup.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="ubutia-gh-pages/assets/js/jquery.magnific-popup.js"></script>
+    <script src="ubutia-gh-pages/assets/js/script.js"></script>
   </body>
 </html>
