this is working

--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
                   <a href="index.html"
                     ><span class="ubutia-icon">
                       <img
-                        src="/assets/images/logoa.png"
+                        src="/ubutia-gh-pages/assets/images/lllogo.png"
                         alt="site-logo"
-                        width="200px"
+                        width="100px"
                       /> </span
                   ></a>
                 </div>
