--- a/graphic-designing.html
+++ b/graphic-designing.html
@@ -46,9 +46,9 @@
                   <a href="index.html">
                     <span class="ubutia-icon">
                       <img
-                        src="ubutia-gh-pages/assets/images/logo.png"
+                        src="ubutia-gh-pages/assets/images/lllogo.png"
                         alt="site-logo"
-                        width="150px"
+                        width="100px"
                       />
                     </span>
                   </a>
@@ -275,7 +275,7 @@
       </div>
       
 
-      <footer class="footer">
+   <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-sm-4">
@@ -288,15 +288,23 @@
               </ul>
             </div>
             <div class="col-sm-4">
-              <h4>Contact Info</h4>
+              <h4>UK</h4>
               <p>
                 Office No.50A, 5 The Shires Old Bedford Road Luton, England
                 LU27QA
               </p>
               <p>Phone: +447716487602</p>
-              <p>Email: support@streamartisian.com</p>
+              <p>Email: services@streamartisan.com</p>
             </div>
             <div class="col-sm-4">
+              <h4>USA</h4>
+              <p>
+                Stream Artisan Corporation 418 Broadway #5981 Albany, NY, 12207
+              </p>
+              <p>Phone: +13323731192</p>
+              <p>Email: services@streamartisan.com</p>
+            </div>
+            <!-- <div class="col-sm-4">
               <h4>Follow Us</h4>
               <div class="social-icons">
                 <ul>
@@ -314,13 +322,13 @@
                   ></a>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="row">
             <div class="col-sm-12 text-center">
               <p>
                 &copy; 2025. All rights reserved. Design by
-                <a href="https://streamartisian.com/">streamartisian</a>.
+                <a href="https://streamartisan.com/">streamartisan</a>.
               </p>
             </div>
           </div>
