--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="/assets/images/logo-icon.png"
+      href="assets/images/logo-icon.png"
     />
 
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/assets/css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet" />
 
-    <link href="/assets/css/owl.carousel.css" rel="stylesheet" />
-    <link href="/assets/css/owl.theme.default.min.css" rel="stylesheet" />
+    <link href="assets/css/owl.carousel.css" rel="stylesheet" />
+    <link href="assets/css/owl.theme.default.min.css" rel="stylesheet" />
 
-    <link href="/assets/css/magnific-popup.css" rel="stylesheet" />
+    <link href="assets/css/magnific-popup.css" rel="stylesheet" />
 
-    <link href="/assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -49,21 +49,23 @@
               <div class="row">
                 <div class="col-xs-6">
                   <div class="logo">
-                    <a href="index.html"
-                      ><span class="ubutia-icon">
+                    <a href="index.html">
+                      <span class="ubutia-icon">
                         <img
-                          src="ubutia-gh-pages/assets/images/lllogo.png"
+                          src="\ubutia-gh-pages\assets\images\lllogo.png"
                           alt="site-logo"
-                          width="200px"
-                        /> </span
-                    ></a>
+                          width="100px"
+                          style="margin-top: -10px"
+                        />
+                      </span>
+                    </a>
                   </div>
                 </div>
                 <div class="col-xs-6 text-right">
                   <div class="menu m">
-                    <a href="#"
-                      ><span class="ion-navicon _ion-android-menu"></span
-                    ></a>
+                    <a href="#">
+                      <span class="ion-navicon _ion-android-menu"></span>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -74,27 +76,39 @@
           <div class="row">
             <div class="intro-box">
               <div class="intro">
-                <h1>We make ideas become a reality</h1>
-                <p>Creative digital agency based Internationally</p>
-                <a class="btn ubutia-btn" href="#">Explore us</a>
+                <h1>Transforming Visions into Reality</h1>
+                <p>Innovative Digital Agency with a Global Reach</p>
+                <a class="btn ubutia-btn" href="about.html">Explore us</a>
               </div>
             </div>
           </div>
         </div>
       </header>
       <section id="about" class="about section">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
-              <h2 class="title">About agency</h2>
-              <p>
-                We are a team of passionate engineers and creative
-                problem-solvers dedicated to building smart, scalable software
-                solutions. From web and mobile applications to AI-driven systems
-                and enterprise platforms, we help businesses harness technology
-                to innovate, grow, and thrive in a digital world.
-              </p>
-            </div>
+        <div class="container about-flex">
+          <img
+            src="https://img.freepik.com/premium-photo/business-concept_173387-5906.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
+            alt="Business concept image"
+            class="about-img"
+          />
+          <div class="about-content">
+            <h2 class="title" >About Us</h2>
+            <p>
+              We are a dynamic team of innovative engineers and creative
+              problem-solvers committed to crafting intelligent, scalable
+              software solutions. Specializing in web and mobile applications,
+              AI-powered systems, and robust enterprise platforms, we empower
+              businesses to leverage cutting-edge technology for innovation,
+              growth, and success in the digital era. Our passion for excellence
+              drives us to deliver tailored solutions that transform ideas into
+              reality. <br />
+              With a client-centric approach, we collaborate closely with
+              businesses to understand their unique challenges and goals. By
+              combining technical expertise with creative vision, we build
+              solutions that are not only functional but also intuitive and
+              future-proof, ensuring our partners stay ahead in a rapidly
+              evolving digital landscape.
+            </p>
           </div>
         </div>
       </section>
@@ -142,7 +156,7 @@
                 <div class="ubutia-card-header">
                   <div class="card-icon">
                     <img
-                      src="ubutia-gh-pages/assets/images/dm-service.png"
+                      src="\ubutia-gh-pages\assets\images\dm-service.png"
                       alt="digital-marketing"
                       width="130px"
                       style="border-radius: 50%"
@@ -164,9 +178,9 @@
                 <div class="ubutia-card-header">
                   <div class="card-icon">
                     <img
-                      src="ubutia-gh-pages/assets/images/ebook1.jpg"
+                      src="\ubutia-gh-pages\assets\images\ebook.jpg"
                       alt="digital-marketing"
-                      width="130px"
+                      width="100px"
                       style="border-radius: 50%"
                     />
                   </div>
@@ -216,14 +230,14 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
-              <img class="quote" src="ubutia-gh-pages/assets/images/quote.png" />
+              <img class="quote" src="assets/images/quote.png" />
               <p>
                 Whether it's a website, online application, graphic design,
                 digital marketing campaign, or eBook publishing service, our
                 developers use scalable, contemporary technology to make your
                 project a reality.
               </p>
-              <img src="ubutia-gh-pages/assets/images/mouse.png" />
+              <img src="assets/images/mouse.png" />
             </div>
           </div>
         </div>
@@ -237,7 +251,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="ubutia-gh-pages/assets/images/station-web.jpg"
+                    src="assets/images/station-web.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -257,7 +271,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="ubutia-gh-pages/assets/images/station-app.jpg"
+                    src="assets/images/station-app.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -277,7 +291,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="ubutia-gh-pages/assets/images/station-edit.jpg"
+                    src="assets/images/station-edit.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -298,7 +312,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="ubutia-gh-pages/assets/images/station-publish.jpg"
+                    src="assets/images/station-publish.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -319,7 +333,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="ubutia-gh-pages/assets/images/station-digital.jpg"
+                    src="assets/images/station-digital.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -340,7 +354,7 @@
                 <div class="ubutia-card-header">
                   <img
                     class="img-responsive"
-                    src="ubutia-gh-pages/assets/images/station-branding.jpg"
+                    src="assets/images/station-branding.jpg"
                   />
                 </div>
                 <div class="ubutia-card-content">
@@ -488,8 +502,8 @@
                 <div class="ubutia-card-content">
                   <h3>Address</h3>
                   <p>
-                    Office No.50A, 5 The Shires Old Bedford Road Luton,England
-                    LU27QA
+                    Stream Artisan Corporation 418 Broadway #5981 Albany, NY,
+                    12207
                   </p>
                 </div>
               </div>
@@ -501,7 +515,7 @@
                 </div>
                 <div class="ubutia-card-content">
                   <h3>Phone</h3>
-                  <p>+447716487602</p>
+                  <p>+13323731192</p>
                 </div>
               </div>
             </div>
@@ -512,14 +526,14 @@
                 </div>
                 <div class="ubutia-card-content">
                   <h3>Email</h3>
-                  <a href="support@streamartisian.com"
-                    >support@streamartisian.com</a
+                  <a href="services@streamartisan.com"
+                    >services@streamartisan.com</a
                   >
                   <!-- <p>support@streamartisian.com</p> -->
                 </div>
               </div>
             </div>
-            <div class="col-sm-12">
+            <!-- <div class="col-sm-12">
               <div class="social-icons">
                 <ul>
                   <a href="#"
@@ -533,7 +547,7 @@
                   ></a>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
@@ -550,15 +564,23 @@
               </ul>
             </div>
             <div class="col-sm-4">
-              <h4>Contact Info</h4>
+              <h4>UK</h4>
               <p>
-                Office No.50A, 5 The Shires Old Bedford Road Luton,England
+                Office No.50A, 5 The Shires Old Bedford Road Luton, England
                 LU27QA
               </p>
               <p>Phone: +447716487602</p>
-              <p>Email: support@streamartisian.com</p>
+              <p>Email: services@streamartisan.com</p>
             </div>
             <div class="col-sm-4">
+              <h4>USA</h4>
+              <p>
+                Stream Artisan Corporation 418 Broadway #5981 Albany, NY, 12207
+              </p>
+              <p>Phone: +13323731192</p>
+              <p>Email: services@streamartisan.com</p>
+            </div>
+            <!-- <div class="col-sm-4">
               <h4>Follow Us</h4>
               <div class="social-icons">
                 <ul>
@@ -576,13 +598,13 @@
                   ></a>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="row">
             <div class="col-sm-12 text-center">
               <p>
                 &copy; 2025. All rights reserved. Design by
-                <a href="https://streamartisian.com/">streamartisian</a>.
+                <a href="https://streamartisan.com/">streamartisan</a>.
               </p>
             </div>
           </div>
@@ -595,5 +617,47 @@
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/jquery.magnific-popup.js"></script>
     <script src="assets/js/script.js"></script>
+    <style>
+      /* About section layout */
+      .about-flex {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        padding: 20px;
+        flex-direction: row;
+      }
+      .about-img {
+        flex: 1;
+        min-width: 300px;
+        max-width: 500px;
+        width: 60%;
+        height: auto;
+        order: 1;
+      }
+      .about-content {
+        flex: 1;
+        min-width: 300px;
+        max-width: 740px;
+        order: 2;
+      }
+      @media (max-width: 991px) {
+        .about-flex {
+          flex-direction: column;
+          text-align: center;
+        }
+        .about-img {
+          order: 1;
+          margin-bottom: 20px;
+          width: 100%;
+          max-width: 100%;
+        }
+        .about-content {
+          order: 2;
+          max-width: 100%;
+        }
+      }
+    </style>
   </body>
 </html>
