--- a/web-development.html
+++ b/web-development.html
@@ -46,9 +46,9 @@
                   <a href="index.html">
                     <span class="ubutia-icon">
                       <img
-                        src="/assets/images/logoa.png"
+                        src="/assets/images/lllogo.png"
                         alt="site-logo"
-                        width="150px"
+                        width="100px"
                       />
                     </span>
                   </a>
@@ -81,26 +81,26 @@
         <h2 style="margin-top: 20px">Why Choose Us</h2>
         <div class="cards">
           <div class="card">
-            <img src="/assets/images/web-design.png" alt="Custom Web Design" />
+            <img src="ubutia-gh-pages/assets/images/web-design.png" alt="Custom Web Design" />
             <p style="font-size: 20px">Custom Design</p>
           </div>
           <div class="card">
             <img
-              src="/assets/images/optimization.png"
+              src="ubutia-gh-pages/assets/images/optimization.png"
               alt="Website Optimization"
             />
             <p style="font-size: 20px">Fast & Optimized</p>
           </div>
           <div class="card">
             <img
-              src="/assets/images/responsive-design.png"
+              src="ubutia-gh-pages/assets/images/responsive-design.png"
               alt="Responsive Web Design"
             />
             <p style="font-size: 20px">Responsive Design</p>
           </div>
           <div class="card">
             <img
-              src="/assets/images/maintenance.png"
+              src="ubutia-gh-pages/assets/images/maintenance.png"
               alt="Maintenance and Support"
             />
             <p style="font-size: 20px">Maintenance & Support</p>
@@ -112,18 +112,18 @@
         <h2 class="section-title text-center">Our Web Development Services</h2>
         <div class="services">
           <div class="carrd">
-            <img src="/assets/images/programming.png" alt="Custom Web Design" />
+            <img src="https://img.freepik.com/free-photo/web-design-concepts-with-blurred-background_1134-82.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Custom Web Design" />
             <p style="font-size: 20px">Custom Website Development</p>
           </div>
           <div class="carrd">
             <img
-              src="/assets/images/online-shop.png"
+              src="https://img.freepik.com/premium-photo/high-quality-digital-image-wallpaper_783884-369438.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
               alt="ecommerce website development"
             />
             <p style="font-size: 20px">Ecommerce Development</p>
           </div>
           <div class="carrd">
-            <img src="/assets/images/cms.png" alt="cms" />
+            <img src="https://img.freepik.com/free-vector/flat-content-management-system-illustrated_23-2148810388.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="cms" />
             <p style="font-size: 20px">
               CMS <br />
               Integration
@@ -131,7 +131,7 @@
           </div>
           <div class="carrd">
             <img
-              src="/assets/images/portfolio.png"
+              src="https://img.freepik.com/free-vector/seo-optimization-banner_33099-1690.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740"
               alt="Maintenance and Support"
             />
             <p style="font-size: 20px">Website Optimization</p>
@@ -169,35 +169,35 @@
         <h2 class="section-title text-center">Projects We Have Done</h2>
         <div class="project-gallery">
           <div class="project-card">
-            <img src="/assets/images/ecommerce.jpg" alt="Project 1" />
+            <img src="https://img.freepik.com/free-psd/gradient-e-commerce-landing-page_23-2149981362.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 1" />
             <p>E-commerce Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/portfolio.jpg" alt="Project 2" />
+            <img src="https://img.freepik.com/premium-vector/black-elegant-website-design-template-business-development_136420-21.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 2" />
             <p>Portfolio Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/business.jpg" alt="Project 3" />
+            <img src="https://img.freepik.com/premium-photo/website-design-website-called-ux-ui_659722-11301.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 3" />
             <p>Corporate Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/blog.jpg" alt="Project 4" />
+            <img src="https://img.freepik.com/premium-photo/blogging-concept-web-blog-social-media-information-network-snugly_31965-691178.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 4" />
             <p>Blog Platform</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/educational.jpg" alt="Project 5" />
+            <img src="https://img.freepik.com/premium-vector/digital-library-online-education-internet-blank-space-phone_255625-159.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 5" />
             <p>Educational Platform</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/real estate.jpg" alt="Project 6" />
+            <img src="https://img.freepik.com/premium-photo/website-design-website-called-ux-ui_659722-11301.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 6" />
             <p>Real Estate Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/event.png" alt="Project 7" />
+            <img src="https://img.freepik.com/free-vector/gift-shopping-checklist-girl-cartoon-character-buying-presents-online-e-commerce-gift-card-promotion-birthday-anniversary-bonus-vector-isolated-concept-metaphor-illustration_335657-1282.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 7" />
             <p>Event Management Website</p>
           </div>
           <div class="project-card">
-            <img src="/assets/images/business.jpg" alt="Project 8" />
+            <img src="https://img.freepik.com/premium-photo/online-fashion-shopping-with-laptop_23-2150400630.jpg?ga=GA1.1.860952126.1749829977&semt=ais_hybrid&w=740" alt="Project 8" />
             <p>Online Marketplace</p>
           </div>
         </div>
@@ -291,7 +291,7 @@
         </div>
       </div>
 
-      <footer class="footer">
+     <footer class="footer">
         <div class="container">
           <div class="row">
             <div class="col-sm-4">
@@ -304,15 +304,23 @@
               </ul>
             </div>
             <div class="col-sm-4">
-              <h4>Contact Info</h4>
+              <h4>UK</h4>
               <p>
                 Office No.50A, 5 The Shires Old Bedford Road Luton, England
                 LU27QA
               </p>
               <p>Phone: +447716487602</p>
-              <p>Email: support@streamartisian.com</p>
+              <p>Email: services@streamartisan.com</p>
             </div>
             <div class="col-sm-4">
+              <h4>USA</h4>
+              <p>
+                Stream Artisan Corporation 418 Broadway #5981 Albany, NY, 12207
+              </p>
+              <p>Phone: +13323731192</p>
+              <p>Email: services@streamartisan.com</p>
+            </div>
+            <!-- <div class="col-sm-4">
               <h4>Follow Us</h4>
               <div class="social-icons">
                 <ul>
@@ -330,13 +338,13 @@
                   ></a>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="row">
             <div class="col-sm-12 text-center">
               <p>
                 &copy; 2025. All rights reserved. Design by
-                <a href="https://streamartisian.com/">streamartisian</a>.
+                <a href="https://streamartisan.com/">streamartisan</a>.
               </p>
             </div>
           </div>
