--- a/services.html
+++ b/services.html
@@ -73,7 +73,7 @@
                   <a href="index.html"
                     ><span class="ubutia-icon">
                       <img
-                        src="/assets/images/logoa.png"
+                        src="/assets/images/lllogo.png"
                         alt="site-logo"
                         width="200px"
                       /> </span
@@ -253,46 +253,65 @@
     </section>
     <script src="assets/js/jquery-3.1.1.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Quick Links</h4>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-sm-4">
-            <h4>Contact Info</h4>
-            <p>Office No.50A, 5 The Shires Old Bedford Road Luton,England LU27QA</p>
-            <p>Phone: +447716487602</p>
-            <p>Email: support@streamartisian.com</p>
-          </div>
-          <div class="col-sm-4">
-            <h4>Follow Us</h4>
-            <div class="social-icons">
+      <footer class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <h4>Quick Links</h4>
               <ul>
-                <a href="#"><li><span class="ion-social-facebook"></span></li></a>
-                <a href="#"><li><span class="ion-social-twitter"></span></li></a>
-                <a href="#"><li><span class="ion-social-pinterest"></span></li></a>
-                <a href="#"><li><span class="ion-social-instagram"></span></li></a>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
+            </div>
+            <div class="col-sm-4">
+              <h4>UK</h4>
+              <p>
+                Office No.50A, 5 The Shires Old Bedford Road Luton, England
+                LU27QA
+              </p>
+              <p>Phone: +447716487602</p>
+              <p>Email: services@streamartisan.com</p>
+            </div>
+            <div class="col-sm-4">
+              <h4>USA</h4>
+              <p>
+                Stream Artisan Corporation 418 Broadway #5981 Albany, NY, 12207
+              </p>
+              <p>Phone: +13323731192</p>
+              <p>Email: services@streamartisan.com</p>
+            </div>
+            <!-- <div class="col-sm-4">
+              <h4>Follow Us</h4>
+              <div class="social-icons">
+                <ul>
+                  <a href="#"
+                    ><li><span class="ion-social-facebook"></span></li
+                  ></a>
+                  <a href="#"
+                    ><li><span class="ion-social-twitter"></span></li
+                  ></a>
+                  <a href="#"
+                    ><li><span class="ion-social-pinterest"></span></li
+                  ></a>
+                  <a href="#"
+                    ><li><span class="ion-social-instagram"></span></li
+                  ></a>
+                </ul>
+              </div>
+            </div> -->
+          </div>
+          <div class="row">
+            <div class="col-sm-12 text-center">
+              <p>
+                &copy; 2025. All rights reserved. Design by
+                <a href="https://streamartisan.com/">streamartisan</a>.
+              </p>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-sm-12 text-center">
-            <p>
-              &copy; 2025. All rights reserved. Design by
-              <a href="https://streamartisian.com/">streamartisian</a>.
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
+      </footer>
     
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/55b73bf748.js"></script>
